# siren

./: .gitignore  README.md  config.toml  finddatepdf.py  keywords.json  processpdf.py  pyproject.toml  run.py  template.yml  test.md
.github/workflows/: TIEScraper.yml  all.yml  test_telegraph.yml  test_tnie.yml  test_tribune.yml  testht.yml
HindustanTimes/: README.md  hindustantimes.py  upload_drive.py
HindustanTimes/.github/workflows/: main.yml
TNIE/: README.md  processpdftnie.py  tnie_monthtitledataframe.py  upload_drive.py
TNIE/.github/workflows/: main.yml
TOI/: main.py
Telegraph/: README.md  monthtitledataframe.py  upload_drive.py
Telegraph/.github/workflows/: main.yml
Tribune/: README.md  processpdftribune.py  tribune_monthtitledataframe.py  upload_drive.py
Tribune/.github/workflows/: main.yml
generics/: cloud.py  scraper.py
readwhere/: core.py  tnie.py  tribune.py
siren/: __init__.py  __main__.py
siren/core/: __init__.py  cloud.py  file.py  http.py  model.py  scraper.py
siren/scrapers/: dummy.py
siren/scrapers/epaper/: ht.py  telegraph.py  tie.py  toi.py
siren/scrapers/epaper/readwhere/: core.py  ocr.py  tie.py  tnie.py  tribune.py
siren/scrapers/ncrb/: adsi.py
siren/scrapers/online/: indiatoday.py  mirror.py  newsminute.py  telegraph.py
siren/utils/: __init__.py
tnie2/: main.py
