[tool.poetry]
name = "siren"
version = "0.1.0"
description = "Automated data collection for the SIREN program"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.0"
google-api-python-client = "^2.106.0"
bs4 = "^0.0.1"
yarl = "^1.9.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"

[tool.pyright]
typeCheckingMode = "strict"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
