[tool.poetry]
name = "siren"
version = "0.1.0"
description = "Automated data collection for the SIREN program"
authors = ["Aman Phatak <aman@zeffo.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.0"
google-api-python-client = "^2.106.0"
bs4 = "^0.0.1"
yarl = "^1.9.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
playwright = "^1.40.0"
uvloop = "^0.19.0"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
google-api-python-client-stubs = "^1.26.0"
datamodel-code-generator = "^0.25.9"

[tool.pyright]
typeCheckingMode = "strict"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
